Completed box install